[package]
name = "Grid-Game"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4"
vec_mem_heap = "0.*"
serde = "1.0"
serde_json = "1.0"
derive-new = "0.7"
roots = "0.0.8"
lazy_static = "1.4.0"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }

[profile.release]
debug = 1
opt-level = 3
lto = "thin"
codegen-units = 1