[package]
name = "Grid-Game"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = {version = "0.4", features = ["glam-serde"]}
vec_mem_heap = "0.*"
serde = "1.0"
serde_json = "1.0"
derive-new = "0.7"
roots = "0.0.8"
lazy_static = "1.4.0"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }

[profile.dev]
debug = 2  # Full debug info for your crate
debug-assertions = true

[profile.dev.package."*"]
debug = 0  # No debug info for dependencies

[profile.release]
debug = 1
opt-level = 3
lto = "thin"
codegen-units = 1